<resources>
    <string name="app_name">Secure Deliveries</string>
    <string name="app_logo">Logo de Secure Deliveries</string>
    <string name="app_background">Fondo de Secure Deliveries</string>

    <string name="huella_instruccion">Ingresa tu huella</string>
    <string name="huella_img">Huella digital</string>
    <string name="huella_autenticacion">Autenticación biometrica.</string>

    <string name="usuario_instruccion">Inicio de sesión</string>
    <string name="usuario_supervisor"><u>Supervisor</u></string>
    <string name="usuario_repartidor"><u>Repartidor</u></string>
    <string name="usuario_img_supervisor"><u>Imagen Supervisor</u></string>
    <string name="usuario_img_repartidor"><u>Imagen Repartidor</u></string>
    <string name="usuario_inicio_sesion">Iniciar sesión</string>
    <string name="usuario_nombre">Ingresar nombre&#8230;</string>
    <string name="usuario_usuario">Ingresar usuario&#8230;</string>
    <string name="usuario_password">Ingresar contraseña&#8230;</string>
    <string name="usuario_cerrar">Cerrar sesión.</string>

    <!-- Menu repartidor -->
    <string name="repartidor_foto">Tomar fotografía.</string>
    <string name="title_activity_menu_supervisor">MenuSupervisor</string>

    <!-- Menu supervisor -->
    <string name="crear_repartidor">Crear repartidor.</string>
    <string name="eliminar_repartidor">Eliminar repartidor</string>
    <string name="editar_repartidor">Editar repartidor.</string>
    <string name="buscar_imagen">Buscar ID de imagen.</string>
    <string name="seleccionar_imagen">Seleccionar imagen a descifrar.</string>
    <string name="informacion_imagen">Ver información de imagen.</string>


    <string name="guardar_repartidor">Guardar</string>
    <string name="eliminar">Eliminar</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="descifrar">Descifrar</string>
    <string name="cifrar">Cifrar</string>
</resources>
