<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MenuRepartidor">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:text="@string/usuario_repartidor"
        android:textAlignment="center"
        android:textColor="#F8F6F6"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />

    <ImageView
        android:id="@+id/btn_repartidor"
        android:layout_width="164dp"
        android:layout_height="177dp"
        android:clickable="true"
        android:contentDescription="@string/usuario_img_repartidor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.252"
        app:srcCompat="@drawable/usuario_repartidor" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="409dp"
        android:layout_height="171dp"
        android:background="#201129"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#FAFAFA"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/btn_tomar_foto"
        android:layout_width="108dp"
        android:layout_height="102dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.662"
        app:srcCompat="@drawable/foto" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:text="@string/usuario_cerrar"
        android:textAlignment="center"
        android:textColor="#F8F6F6"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="187dp"
        android:layout_height="43dp"
        android:text="@string/repartidor_foto"
        android:textAlignment="center"
        android:textColor="#F8F6F6"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.735" />

    <ImageView
        android:id="@+id/btn_cerrar_sesion_repartidor"
        android:layout_width="108dp"
        android:layout_height="102dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.878"
        app:srcCompat="@drawable/cerrarsesion" />
</androidx.constraintlayout.widget.ConstraintLayout>